--- a/impressum.html
+++ b/impressum.html
@@ -95,14 +95,10 @@
 <body>
   <h1>Impressum</h1>
   <div class="card" id="legal-card">
-    <p><strong>Max Mustermann</strong><br/>Musterstraße 12<br/>12345 Musterstadt<br/>Deutschland</p>
-    <p>E-Mail: <a href="mailto:max@mustermann.de">max@mustermann.de</a></p>
-    <p>Verantwortlich für den Inhalt gemäß § 55 Abs. 2 RStV: Max Mustermann</p>
-    <p>
-      Plattform der EU-Kommission zur Online-Streitbeilegung:<br/>
-      <a href="https://ec.europa.eu/consumers/odr" target="_blank">https://ec.europa.eu/consumers/odr</a><br/>
-      Wir sind nicht verpflichtet und nicht bereit, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
-    </p>
+    <p><strong>Tobias Caha</strong><br/>Hauptstraße 26<br/>2763 Pernitz<br/>Österreich</p>
+    <p>E-Mail: <a href="cahatobias@protonmail.com">cahatobias@protonmail.com</a></p>
+    <p>Telefonnummer: <a href="+4366475555780">+4366475555780</a></p>
+    <p>Verantwortlich für den Inhalt gemäß § 55 Abs. 2 RStV: Tobias Caha</p>
   </div>
 
   <script>
