--- a/datenschutz.html
+++ b/datenschutz.html
@@ -25,7 +25,7 @@
   <h1>Datenschutzerklärung</h1>
   <div class="card" id="privacy-card">
     <h2>1. Verantwortlich</h2>
-    <p>Max Mustermann, Musterstraße 12, 12345 Musterstadt<br/>E-Mail: <a href="mailto:max@mustermann.de">max@mustermann.de</a></p>
+    <p>Tobias Caha, Hauptstraße 26, 2763 Pernitz<br/>E-Mail: <a href="cahatobias@protonmail.com">cahatobias@protonmail.com</a></p>
 
     <h2>2. Erhobene Daten</h2>
     <p>Beim Aufruf der Seite werden IP-Adresse, Browsertyp und Uhrzeit gespeichert (Server-Logfiles). Keine Auswertung durch Tracking.</p>
