--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 </div>
                 <div class="plugin-content">
                     <h3 class="plugin-title">NTMenusv2</h3>
-                    <p class="plugin-description">Advanced anti-cheat and player protection system with customizable rules and real-time monitoring.</p>
+                    <p class="plugin-description">Ein erweitertes Minecraft Spigot Plugin welches GUIS und Forms erstellt und verwaltet.</p>
                     <div class="plugin-stats">
                         <span class="plugin-version">v1.0.0</span>
                     </div>
